Fixed too large, non-scaling font.

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -16,14 +16,6 @@ body {
     font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-.title {
-    font-family: 'Book Antiqua', Palatino, 'Palatino Linotype', 'Palatino LT STD', Georgia, serif;
-    font-size: 140px;
-    font-style: normal;
-    font-variant: small-caps;
-    font-weight: 500;
-}
-
 .text-vertical-center {
     display: table-cell;
     text-align: center;
@@ -33,8 +25,10 @@ body {
 .text-vertical-center h1 {
     margin: 0;
     padding: 0;
-    font-size: 4.5em;
-    font-weight: 700;
+    font-size: 7em;
+    font-family: 'Book Antiqua', Palatino, 'Palatino Linotype', 'Palatino LT STD', Georgia, serif;
+    font-variant: small-caps;
+    font-weight: normal;
 }
 
 /* Custom Button Styles */
